# rust-backend

./: .gitignore  Cargo.toml  TODO.md  analyse.ipynb  diesel.toml  get_yfinance_info.ipynb
jobs/: get_historical_exchanges_rates.py  get_latest_ecb_exchange_rates.py  populate_db.py
migrations/2024-06-02-101355_basics/: down.sql  up.sql
migrations/2024-06-02-101355_initial/: up.sql
migrations/2024-06-02-101356_companies/: down.sql  up.sql
migrations/2024-06-02-101357_transactions/: down.sql  up.sql
migrations/2024-06-02-101358_indexes/: down.sql  up.sql
migrations/2024-06-29-101256_definitions/: down.sql  up.sql
migrations/2024-08-20-213617_dashboards/: down.sql  up.sql
src/: countries.rs  database_pools.rs  db_models.rs  db_models2.rs  dictionary.rs  exchanges.rs  industries.rs  main.rs  responses.rs  router.rs  schema.rs  sectors.rs  server_config.rs  users.rs
src/companies/: handlers.rs  mod.rs
src/companies/handlers/: companies.rs  exchanges.rs  industries.rs  mod.rs  periods.rs  routes.rs  sectors.rs
src/currencies/: handlers.rs  mod.rs  querysets.rs
src/db/: database_pools.rs  mod.rs  pagination.rs  schema.rs
src/dictionary/: handlers.rs
src/middlewares/: auth.rs
src/server/: api_docs.rs  auth.rs  config.rs  mod.rs  responses.rs  router.rs  routes.rs  state.rs  tracing.rs  ulid.rs
src/transactions/: accounts.rs  assets_types.rs  expenses.rs  files_parsers.rs  handlers.rs  incomes.rs  investments.rs  mod.rs  transactions.rs
src/transactions/handlers/: incomes.rs  investments.rs  mod.rs  transactions.rs
src/users/: facades.rs  handlers.rs  mod.rs  models.rs  permissions.rs
templates/: index.jinja  layout.jinja
