[package]
name = "elerem"
version = "3.0.0"
edition = "2021"

[dependencies]
deadpool-diesel = { version = "0.6.1", features = ["postgres", "tracing"] }
diesel = { version = "2.2.0", features = ["serde_json", "chrono", "numeric"] }
diesel_full_text_search = "2.2.0"
diesel_migrations = { version = "2.2.0", features = ["postgres"] }

tokio = { version = "1.38.0", features = ["full"] }

axum = { version = "0.7.5", features = ["multipart", "json", "query", "http2", "macros", "tracing", "ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["limit", "fs", "trace", "cors", "set-header"] }
hyper = { version = "1.3.1", features = ["full"] }

cookie = { version = "0.18", features = ["secure", "percent-encode"] }
jsonwebtoken = "9"
argon2 = "0.5.3"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

serde = { version = "1.0.163", features = ["derive", "rc"] }
serde_json = "1.0.96"
serde_urlencoded = "0.7.1"

menva = "1.0.0"
url = "2.5.0"
chrono = { version = "0.4", features = ["serde"] }
